--- a/package.json
+++ b/package.json
@@ -1,11 +1,13 @@
 {
-  "name": "hwid-reset-bot",
+  "name": "discord-bot",
   "version": "1.0.0",
   "main": "bot.js",
-  "license": "MIT",
+  "type": "module",
+  "scripts": {
+    "start": "node bot.js"
+  },
   "dependencies": {
-    "discord.js": "^14.14.1",
+    "discord.js": "^14.15.0",
     "node-fetch": "^3.3.2"
   }
 }
-
